test/bad/class3.pacc
/*
nopacc 6:1 'expected CCRanges, or "]"'
*/

Bad :: char * ← [] → { "foo" }
